# Epic01_ProLine_CAD

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: example-agent.agent.md
.github/: copilot-instructions.md  pull_request_template.md
.prompts/: example-prompt.prompt.md
ExcPlan/: 3-agent-execution-plan-corrected.md  ParseAgent_改进计划.md  constraint_agent_frontend_plan.md  constraint_subsystem_v3_execution_plan.md  next3_tasks_execution_plan.md  parse_agent_board.html  parse_agent_evaluation_dimensions.md  parse_agent_ga_execution_plan.md  产线 Multi-Agent 协同 — 三个 Agent 实例化 Profile 设计.md  产线 Multi-Agent 协同 — 功能测试计划（按 Agent 能力重构）.md  工艺产线 Multi-Agent 协同系统 — 3-Agent 实现执行计划.md
PRD/: Multi-Agent 协同闭环演示 - 产品核心流程可视化.html  PRD全局附录_数据模型与接口规范.md  RBAC 权限矩阵 JSON 配置（可直接用于后端权限守卫）.txt  step1-产线+工艺PRD20260408-√.md  step2-基于 Palantir 工程哲学的 PRD v2.0 修正策略报告.md  step3.0-PRD-template.md  step3.0-产线+工艺_AI+CAD_系统_PRD_v3.0.md  step3.1-PRD-1 v3.0：语义化底图解析与环境构建 · 可研发排期版-√.md  step3.2-PRD-2 v3.0：工艺文档转数字约束（知识图谱+MBD路线）研发排期级.md  step3.3-PRD-3：约束驱动布局优化 v3.0 完整文档.md  step3.4-PRD-4：脉动仿真验证 v3.0 完整文档.md  step3.5-PRD-5：Living Decision Board 活体决策工作台 v3.0.md  step4.01-interactive_5_roles_dashboard_prototype.html  step4.0A航空产线AI规划系统 · 原型设计执行计划 v3.0（本体论计算完整融合版）.md  step4.1-PRD-1_语义化底图解析_产品原型.html  step4.2-PRD-2_工艺文档转数字约束_产品原型.html  step4.A产线+工艺 AI+CAD 系统 产品原型.html  step4.X-Multi-Agent 协同闭环演示 - 产品核心流程可视化.html  step5.2-关键技术验证计划.md  step6.1-航空制造领域测试数据方案.md  step7-技术方案文档.md  前端组件清单（登录页 + 权限投影）.md
app/: __init__.py  deps.py  errors.py  main.py  queue.py
corpus/: README.md  seeds.yaml
db/: alembic.ini  docker-compose.db-lite.yml  docker-compose.db.yml  postgresql.conf.snippet
docs/: MILESTONE_REVIEW_2026-04-24.md  ROADMAP_3D_SIM.md  constraint_subsystem_data_model.md  data_architecture.md  data_inventory.md  evaluation_panorama_followup_plan.md  parse_agent_input_lifecycle.md  parse_agent_rtree_design.md  parse_agent_steps_overview.md  runbook_rbac_rollout.md
scripts/: backfill_0015.py  check_agent_isolation.py  check_constraint_fk_matrix.py  check_rbac_membership.py  check_schema_drift.py  create_github_issues.py  demo_parse_e2e.py  dev_up.ps1  diagnose_run.py  dump_parse_results.py  gold_eval.py  init_minio.py  promote_taxonomy_terms.py  quality_diagnose.py  quality_matrix.py  quality_matrix_llm.py  seed_constraint_demo.py  start_cdc_consumer.py  sync_corpus_to_minio.py
shared/: __init__.py  audit_store.py  config.py  db_schemas.py  mcp_protocol.py  models.py
spikes/: TEST_CASE_DESIGN.md  TEST_CASE_LLM_ANALYSIS.md  TEST_PLAN.md  conftest.py  pytest.ini
web/: .gitignore  README.md  next.config.js  (+6 more)
(+250 files in other folders)
